2017-06-30  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py(Dataset.read):

	- Do not impose dependencies of my_pseudo_fields when those fields
	were not asked for in the reader

	* typhon/datasets/tovs.py:
	
	(HIRS._read):

	- Comment out catch_warnings as long as bug at
	http://bugs.python.org/issue29672 remains.  Be aware that the
	resulting warning is spurious, such as confirmed at
	https://github.com/numpy/numpy/issues/8383

	(HIRS.as_xarray_dataset):

	- Only assign lon/lat coordinates if lon/lat actually present in
	fields.

2017-06-28  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/tovs.py:

	- Don't log on root level, as if this happens before
	logging.basicConfig was set, this will become ineffective!

2017-06-28  Lukas Kluft  <lukas.kluft@gmail.com>

	* README.md: Updated installation recommendations.

	The installation guide for developers now includes a hint to
	install the package in the home directory not system wide.

	* typhon/plots/common.py (label_axes): Minor change in example.

2017-06-17  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/common.py (label_axes):

	Function add a label to each axis in a figure conveniently.

	* doc/typhon.plots.rst: Added `label_axes()` to documentation.

2017-06-16  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py(Dataset):

	- Rather than hardcoding time-field to be "time", set this in an
	attribute.  For some datasets it may be "date"?

	* typhon/datasets/tovs.py(HIRS.__init__):

	- Set start_date, end_date from _tovs_defs.HIRS_periods

2017-06-12  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/tovs.py(HIRS2):

	- Add more aliases for referring to older satellites.

	* typhon/physics/units/em.py(SRF.estimate_band_coefficients):

	- In ad-hoc band correction estimate method, fix regular expression so
	that it works for older HIRS (before NOAA-10).  This contributes to
	the fix of HIRS FCDR #110.

2017-06-12  Gerrit Holl  <g.holl@reading.ac.uk>
